--- a/social-links-profile-main/style.css
+++ b/social-links-profile-main/style.css
@@ -1,72 +1,118 @@
-@charset "UTF-8";
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-
-:root {
-    --fontepadrao: "Inter", sans-serif;
-    --verde: hsl(75, 94%, 57%);
-    --branco: hsl(0, 0%, 100%);
-    --cinza: hsl(0, 0%, 20%);
-    --cinzaEscuro: hsl(0, 0%, 12%);
-    --pretoOff: hsl(0, 0%, 8%);
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter';
 }
 
 * {
-    padding: 0px;
-    margin: 0px;
-    font-size: 24px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter';
 }
 
-body {
-    background-color: var(--pretoOff);
-    font-family: var(--fontepadrao);
+:root {
+    --default-background-color: hsl(0, 0%, 8%);
+    --main-background-color: hsl(0, 0%, 12%);
+    --link-background-color: hsl(0, 0%, 20%);
+    --link-font-color: hsl(0, 0%, 100%);
+    --location-font-color: hsl(75, 94%, 57%); 
+    --white-font-color: #fff; 
+}
+
+.container {
+    display: grid;
+    height: 100vh;
+    width: 100vw;
+    grid-template-rows: 10fr auto;
+    place-items: center;
+    background-color: var(--default-background-color);
 }
 
 main {
-    position: absolute;
-    background-color: var(--cinzaEscuro);
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    height: 70%;
-    width: 23%;
-    border-radius: 10px;
-}
-
-img {
-    border-radius: 50%;
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, 50%);
-}
-
-h3 {
-    position: inherit;
-}
-
-h4 {
-    color: var(--verde);
-    text-align: center;
-    font-size: 0.7em;
-}
-
-p {
-    margin: 25px;
-    color: var(--branco);
-    font-size: 14px;
-    text-align: center;
-}
-
-a {
-    text-decoration: none;
-    background-color: var(--cinza);
-    color: var(--branco);
-}
-
-.conteudo__botao {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+    width: 30vw;
+    height: 60vh;
+    background-color: var(--main-background-color);
+    border-radius: 12px;
+    padding: 2%;
+}
+
+#profile {
+    height: 90px;
+    width: 90px;
+    border-radius: 50%; 
+    background: url(./assets/images/avatar-jessica.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+}
+
+main h1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+    color: var(--white-font-color);
+    font-weight: 600;
+    width: 30vw;
+}
+
+h1 span{
+    margin: 2%;
+    color: var(--location-font-color);
+    font-size: 14px;
+    font-weight: 600;
+}
+
+main h2{
+    width: 30vw;
+    font-size: 16px;
+    color: var(--white-font-color);
+    font-weight: 400;
+    text-align: center;
+}
+
+.link {
+    display: flex;
+    text-align: center;
+    text-decoration: none;
+    width: 24vw;
+    height: 4vh;
+    background-color: var(--link-background-color);
+    color: var(--link-font-color);
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    font-weight: 600;
+}
+
+.link:hover {
+    color: var(--link-background-color);
+    background-color: var(--location-font-color);
+}
+
+@media screen and (max-width: 375px) {
+    main {
+        height: 80vh;
+        width: 85vw;
+    }
+    .link {
+        width: 80vw;
+        height: 7vh;
+    }
+    main h2 {
+        width: 85vw;
+    }
+    main h1 {
+        width: 85vw;
+    }
 }
