--- a/blog-preview-card-main/style.css
+++ b/blog-preview-card-main/style.css
@@ -36,6 +36,7 @@ main{
 
 .banner > img {
     display: block;
+    width: 87%;
     margin: 30px auto;
     border-radius: 10px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.609);
@@ -45,7 +46,7 @@ main{
 .sub-tag {
     display: inline;
     padding: 5px 10px;
-    margin-left: 30px;
+    margin-left: 7%;
 
     border-radius: 5px;
     background-color: var(--amarelo);
@@ -54,36 +55,37 @@ main{
 }
 
 #tag__date {
-    margin-left: 30px;
+    margin-left: 7%;
     padding: 10px 0px;
     font-weight: 600;
 }
 
 .titulo__conteudo {
     font-weight: 900;
-    margin-left: 30px;
+    margin-left: 7%;
 }
 
 .conteudo__texto {
     color: var(--Grey);
-    margin-left: 30px;
+    margin-left: 7%;
     font-weight: 400;
+    text-align: justify;
+    width: 86%;
 }
 
 .creditos {
     display: flex;
-    justify-content: left;
-    margin: 0px 30px;
+    align-items: center;
+    margin: 0px 0px 30px 7%;
 }
 
 .creditos > img {
     width: 5vh;
     height: 5vh;
+    vertical-align: middle;
 }
 
 .creditos > h4 {
-    display: inline-flex;
-    flex-direction: row;
     font-weight: 900;
     padding-left: 20px;
 } 
