--- a/results-summary-component-main/style.css
+++ b/results-summary-component-main/style.css
@@ -36,8 +36,8 @@ body {
 
 main {
     background-color: var(--White);
-    width: 70%;
-    height: 70%;
+    width: 1400px;
+    height: 650px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.644);
     position: absolute;
     top: 50%;
