--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -31,7 +31,7 @@ body {
 
 main {
     background-color: white;
-    max-width: 1440px;
+    max-width: 1040px;
     min-width: 375px;
     margin: 25px auto;
 }
@@ -52,6 +52,7 @@ h1 {
 
 section {
     margin: 25px 50px;
+    padding-bottom: 50px;
 }
 
 p {
@@ -77,4 +78,31 @@ h2 {
 
 section > ol > li {
     margin-bottom: 15px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+td, th {
+    padding: 10px;
+    text-align: left;
+    text-indent: px;
+    border-bottom: 0.5px solid rgba(158, 157, 157, 0.381);
+}
+
+.nutrientes {
+    width: 250px;
+    color: var(--cor05)
+}
+
+th {
+    font-size: 1.3em;
+}
+
+.quantidade__num {
+    color: var(--primaria);
+    font-weight: bold;
+    margin: -50px;
 }
