--- a/social-links-profile-main/style.css
+++ b/social-links-profile-main/style.css
@@ -48,7 +48,7 @@ main {
     height: 90px;
     width: 90px;
     border-radius: 50%; 
-    background: url(./assets/images/avatar-jessica.jpeg);
+    background: url(./assets/images/);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
